fix overflow from flex wrap

--- a/b3TeamAssignment/style.css
+++ b/b3TeamAssignment/style.css
@@ -12,6 +12,9 @@ li {
   list-style: none;
 }
 
+main {
+  overflow: hidden;
+}
 /* CSS Bagian Header */
 header {
   display: flex;
@@ -98,7 +101,7 @@ blockquote:after {
 }
 
 .product img {
-  margin: 10px;
+  margin: 0 10px 10px 10px;
   width: 250px;
   height: 350px;
   border-radius: 30px;
@@ -132,7 +135,8 @@ blockquote:after {
   display: flex;
   flex-wrap: wrap;
   align-content: center;
-  margin: 0 80px 80px 80px;
+  justify-content: center;
+  margin: 0 80px 80px 0px;
   width: 100%;
 }
 
